Fix tooltips being part of the layout, creating a scrollbar

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 html, body {
     margin: 0;
-    background: #bfae94
+    background: #bfae94;
 }
 
 body, svg {
@@ -50,7 +50,7 @@ body, svg {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 98vh;
+    height: 100vh;
 }
 
 text {
